# cauldron

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  test.yml
cauldron/: __init__.py  __main__.py  collect.py  config.py  main.py  report.py
cauldron/ai/: analyzer.py  attack_paths.py  classifier.py  cve_enricher.py
cauldron/api/: server.py
cauldron/cli/: commands.py
cauldron/data/: default_creds.yaml  exploit_db.yaml
cauldron/exploits/: commands.py  default_creds.py  matcher.py
cauldron/graph/: connection.py  ingestion.py  models.py  topology.py
cauldron/parsers/: masscan_parser.py  nmap_parser.py
data/samples/: corporate_network.xml
docs/: ai-triage.md  api.md  architecture.md  cli.md  contributing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/components/: AttackPaths.tsx  Badge.tsx  CollectPanel.tsx  ExploitCommands.tsx  GraphCanvas.tsx  HostDetail.tsx  HostList.tsx  ImportPanel.tsx  Layout.tsx  Legend.tsx  StatsPanel.tsx
frontend/src/hooks/: useApi.ts
frontend/src/types/: index.ts
frontend/src/utils/: colors.ts  format.ts
scripts/: gen_brand.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_api_spa.py  test_attack_paths.py  test_classifier.py  test_collect.py  test_cve_enricher.py  test_exploit_matcher.py  test_ingestion.py  test_masscan_parser.py  test_nmap_parser.py  test_report.py  test_topology.py
