[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cauldron"
version = "0.1.0"
description = "Network Attack Path Discovery — BloodHound for the network layer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kostiantyn Demydenko"},
]
keywords = [
    "pentesting",
    "security",
    "attack-graph",
    "nmap",
    "masscan",
    "vulnerability-scanner",
    "neo4j",
    "bloodhound",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "neo4j>=5.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/kodych/cauldron"
Repository = "https://github.com/kodych/cauldron"
Issues = "https://github.com/kodych/cauldron/issues"
Changelog = "https://github.com/kodych/cauldron/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
ai = [
    "anthropic>=0.40",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
all = ["cauldron[api,ai,dev]"]

[project.scripts]
cauldron = "cauldron.main:cli"

[tool.setuptools.packages.find]
include = ["cauldron*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
